version/0.9/_sources/examples/gallery_examples/04-analyses/update_harmonic_vibe_properties.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\gallery_examples\04-analyses\update_harmonic_vibe_properties.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_gallery_examples_04-analyses_update_harmonic_vibe_properties.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_gallery_examples_04-analyses_update_harmonic_vibe_properties.py:


.. _ref_sherlock_update_harmonic_vibe_props:

=============================================
Update Harmonic Vibration Analysis properties
=============================================

This example demonstrates how to connect to the Sherlock gRPC service, import a project,
and configure harmonic vibration analysis properties.

Description
-----------
Sherlock allows you to perform harmonic vibration analysis.
This script performs the following steps:
- Connect to the Sherlock service.
- Import a project.
- Configure the properties for harmonic vibration analysis.

.. GENERATED FROM PYTHON SOURCE LINES 37-53

.. code-block:: Python


    """
     sphinx_gallery_thumbnail_path =
     './images/sherlock_update_harmonic_vibe_analysis_props_example.png'
    """

    import os

    from examples.examples_globals import get_sherlock_tutorial_path

    from ansys.sherlock.core import launcher
    from ansys.sherlock.core.errors import (
        SherlockImportProjectZipArchiveError,
        SherlockUpdateHarmonicVibePropsError,
    )


.. GENERATED FROM PYTHON SOURCE LINES 54-57

Connect to Sherlock
===================
Connect to the Sherlock service and ensure proper initialization.

.. GENERATED FROM PYTHON SOURCE LINES 57-60

.. code-block:: Python


    sherlock = launcher.connect(port=9092, timeout=10)


.. GENERATED FROM PYTHON SOURCE LINES 61-64

Delete Project
==============
Delete the project if it already exists.

.. GENERATED FROM PYTHON SOURCE LINES 64-71

.. code-block:: Python


    try:
        sherlock.project.delete_project("Test")
        print("Project deleted successfully.")
    except Exception:
        pass


.. GENERATED FROM PYTHON SOURCE LINES 72-75

Import Tutorial Project
=======================
Import the tutorial project zip archive from the Sherlock tutorial directory.

.. GENERATED FROM PYTHON SOURCE LINES 75-86

.. code-block:: Python


    try:
        sherlock.project.import_project_zip_archive(
            project="Test",
            category="Demos",
            archive_file=os.path.join(get_sherlock_tutorial_path(), "Auto Relay Project.zip"),
        )
        print("Tutorial project imported successfully.")
    except SherlockImportProjectZipArchiveError as e:
        print(f"Error importing project zip archive: {e}")


.. GENERATED FROM PYTHON SOURCE LINES 87-90

Update Harmonic Vibration Properties
====================================
Configure properties for harmonic vibration analysis.

.. GENERATED FROM PYTHON SOURCE LINES 90-111

.. code-block:: Python


    try:
        # Update properties for harmonic vibration analysis
        sherlock.analysis.update_harmonic_vibe_props(
            project="Test",
            harmonic_vibe_properties=[
                {
                    "cca_name": "Auto Relay",
                    "harmonic_vibe_count": 2,
                    "harmonic_vibe_damping": "0.01, 0.05",
                    "part_validation_enabled": False,
                    "require_material_assignment_enabled": False,
                    "analysis_temp": 23.8,
                    "analysis_temp_units": "C",
                    "filter_by_event_frequency": False,
                }
            ],
        )
        print("Harmonic vibration properties updated successfully.")
    except SherlockUpdateHarmonicVibePropsError as e:
        print(f"Error updating harmonic vibration properties: {e}")


.. _sphx_glr_download_examples_gallery_examples_04-analyses_update_harmonic_vibe_properties.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: update_harmonic_vibe_properties.ipynb <update_harmonic_vibe_properties.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: update_harmonic_vibe_properties.py <update_harmonic_vibe_properties.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: update_harmonic_vibe_properties.zip <update_harmonic_vibe_properties.zip>`
